インスタンス生成の抑制