@@ -99,12 +99,12 @@ public class PersistentXmlImpl extends Persistent {
 		int columnGroupCount = 0;
 		int columnCount = 0;
 		for (ColumnGroup columnGroup : diagramContents.getGroups()) {
-			context.columnGroupMap.put(columnGroup, new Integer(
+			context.columnGroupMap.put(columnGroup, Integer.valueOf(
 					columnGroupCount));
 			columnGroupCount++;
 
 			for (NormalColumn normalColumn : columnGroup.getColumns()) {
-				context.columnMap.put(normalColumn, new Integer(columnCount));
+				context.columnMap.put(normalColumn, Integer.valueOf(columnCount));
 				columnCount++;
 			}
 		}
@@ -114,13 +114,13 @@ public class PersistentXmlImpl extends Persistent {
 		int complexUniqueKeyCount = 0;
 
 		for (NodeElement content : diagramContents.getContents()) {
-			context.nodeElementMap.put(content, new Integer(nodeElementCount));
+			context.nodeElementMap.put(content, Integer.valueOf(nodeElementCount));
 			nodeElementCount++;
 
 			List<ConnectionElement> connections = content.getIncomings();
 
 			for (ConnectionElement connection : connections) {
-				context.connectionMap.put(connection, new Integer(
+				context.connectionMap.put(connection, Integer.valueOf(
 						connectionCount));
 				connectionCount++;
 			}
@@ -133,7 +133,7 @@ public class PersistentXmlImpl extends Persistent {
 
 				for (Column column : columns) {
 					if (column instanceof NormalColumn) {
-						context.columnMap.put(column, new Integer(columnCount));
+						context.columnMap.put(column, Integer.valueOf(columnCount));
 
 						columnCount++;
 					}
@@ -142,7 +142,7 @@ public class PersistentXmlImpl extends Persistent {
 				for (ComplexUniqueKey complexUniqueKey : table
 						.getComplexUniqueKeyList()) {
 					context.complexUniqueKeyMap.put(complexUniqueKey,
-							new Integer(complexUniqueKeyCount));
+							Integer.valueOf(complexUniqueKeyCount));
 
 					complexUniqueKeyCount++;
 				}
@@ -152,20 +152,20 @@ public class PersistentXmlImpl extends Persistent {
 
 		int wordCount = 0;
 		for (UniqueWord word : diagramContents.getDictionary().getUniqueWordList()) {
-			context.wordMap.put(word, new Integer(wordCount));
+			context.wordMap.put(word, Integer.valueOf(wordCount));
 			wordCount++;
 		}
 
 		int tablespaceCount = 0;
 		for (Tablespace tablespace : diagramContents.getTablespaceSet()) {
-			context.tablespaceMap.put(tablespace, new Integer(tablespaceCount));
+			context.tablespaceMap.put(tablespace, Integer.valueOf(tablespaceCount));
 			tablespaceCount++;
 		}
 
 		int environmentCount = 0;
 		for (Environment environment : diagramContents.getSettings()
 				.getEnvironmentSetting().getEnvironments()) {
-			context.environmentMap.put(environment, new Integer(
+			context.environmentMap.put(environment, Integer.valueOf(
 					environmentCount));
 			environmentCount++;
 		}
